--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,9 +1,9 @@
-name: Slowloris Attack
+name: Slowloris
 
 on:
   push:
     branches:
-      - main  # Adjust according to your branch name
+      - master  # Adjust according to your branch name
 
 jobs:
   slowloris-attack:
